# glinski

./: .gitignore  README.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/assets/: index.html
frontend/src/: draw.ts  index.ts  models.ts  shapes.ts  temp.ts
glinski-backend/: Cargo.toml
glinski-backend/src/: game.rs  main.rs  models.rs
glinski-backend/src/game/: mod.rs  moves.rs
glinski-frontend/assets/: index.css  index.js
glinski-frontend/src/: client.ts  draw.ts  index.ts  models.ts  temp.ts
