[package]
name = "glinski-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "fs", "sync"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
warp = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
